[package]
name = "moosicbox_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = { version = "4.4.0", features=["openssl"] }
audiotags = { path = "../audiotags" }
awc = { version = "3.2.0", features=["openssl"] }
clap = { version = "4.4.4", features = ["derive"] }
fs_extra = "1.3.0"
openssl = "0.10.57"
regex = "1.9.5"
serde_json = "1.0.107"
