[package]
name = "moosicbox_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
audiotags = { path = "../audiotags" }
clap = { version = "4.4.4", features = ["derive"] }
fs_extra = "1.3.0"
openssl = "0.10.57"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
